--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    <title>Potifólo | Ivan Rodrigues</title>
+    <title>Potifólio | Ivan Rodrigues</title>
   </head>
   <body>
     <div id="root"></div>
